# vibetasks

./: .gitignore  CHANGELOG.md  LICENSE  Launch Vibe Tasks.command  README.md  package-lock.json  package.json
.claude/: settings.json
app/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  api.ts  store.ts  theme.css
app/src-tauri/: Cargo.toml  schema.sql  tauri.conf.json
app/src-tauri/src/: commands.rs  db.rs  geom.rs  lib.rs  models.rs
app/src/components/: Board.tsx  Card.tsx  Column.tsx  CommandPalette.tsx  GraphView.tsx  Guardrails.tsx  LastSession.tsx  NewTaskModal.tsx  NextGoal.tsx  Notes.tsx  ResizeHandle.tsx  SearchBar.tsx  Sidebar.tsx  SidebarSettings.tsx  TaskDetail.tsx  Toasts.tsx
docs/: features-inventory.md  token-reduction.md  vibetasks-claude-protocol.md
mcp/: launch.sh  package.json  tsconfig.json
mcp/src/: audit.ts  cli.ts  db.ts  repo.ts  server.ts  snapshot.ts  tools.ts
mcp/test/: audit.test.ts  cli.test.ts  repo.test.ts
scripts/: app-check.sh  install-app.sh  migrate-summary-to-brief-details.py  run-under-node22.sh  seed-demo.mjs  stop-reminder.sh
shared/: package.json
shared/src/: ids.ts  types.ts
